applications/temperaturas/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: temperaturas-backend
  labels:
    app: temperaturas
    tier: backend
spec:
  type: ClusterIP
  ports:
    - name: service-temperaturas
      port: 5000
      targetPort: api-server
  selector:
    app: temperaturas
    tier: backend
