applications/temperaturas/service-preview.yml
apiVersion: v1
kind: Service
metadata:
  name: temperaturas-frontend-service-preview
spec:
  type: NodePort
  ports:
    - name: service-guestbook
      port: 3000
      targetPort: http-server
  selector:
    app: temperaturas
